feat: swagger e documentacao